# wildrush

./: .env-example  .gitignore  README.md  README_RU.md  pyproject.toml  requirements.txt
bot/config/: config.py
bot/core/: ads_view_mixin.py  headers.py  launcher.py  tapper.py
bot/exceptions/: __init__.py
bot/utils/: logger.py  session_backup.py  universal_telegram_client.py
