[project]
name = "bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiocfscrape==1.0.0",
    "aiofiles==24.1.0",
    "curl_cffi>=0.7.0",
    "aiohttp-proxy==0.1.2",
    "better-proxy==1.2.0",
    "colorama==0.4.6",
    "fasteners==0.19",
    "flask==3.1.0",
    "loguru==0.7.2",
    "opentele==1.15.1",
    "kurigram==2.2.12",
    "Telethon==1.41.2",
    "pydantic-settings==2.4.0",
    "python-dotenv==1.0.1",
    "python-socks==2.5.1",
    "qrcode==8.0",
    "ua-generator==1.0.6",
    "werkzeug==3.1.3",
]
